# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: dump.rs  lib.rs
