[package]
autotests = false
edition = "2018"
name = "derive_builder"
publish = false
version = "0.0.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = {version = "1.0", features = ["diff"]}

[dependencies]
syn = {version="1.0", features = ["extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
